--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,7 +1,8 @@
 .burger {
   width: 80%;
-  max-width: 500px;
   height: 100vw;
+  max-width: 500px;
+  max-height: 550px;
   margin: auto;
   overflow: scroll;
   text-align: center;
