--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,31 +1,29 @@
 .burger {
   width: 80%;
-  height: 100vw;
+  height: 500px;
   max-width: 500px;
-  max-height: 500px;
   margin: auto;
   overflow: scroll;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
+  margin-bottom: 16px;
 }
 
-@media (min-width: 500px) and (min-height: 400px) {
+/* @media (min-width: 500px) and (min-height: 400px) {
   .burger {
     width: 300px;
     height: 300px;
   }
-}
+} */
 
 @media (min-width: 500px) and (min-height: 401px) {
   .burger {
     width: 60%;
-    height: 70vw;
   }
 }
-
+/* 
 @media (min-width: 1000px) and (min-height: 700px) {
   .burger {
-    height: 60vw;
   }
-}
+} */
