--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,29 +1,30 @@
-.burger {
-  width: 80%;
-  height: 500px;
-  max-width: 500px;
+.Burger {
+  width: 100%;
+  height: 250px;
   margin: auto;
   overflow: scroll;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
-  margin-bottom: 16px;
 }
 
-/* @media (min-width: 500px) and (min-height: 400px) {
-  .burger {
-    width: 300px;
-    height: 300px;
+@media (min-width: 1000px) and (min-height: 700px) {
+  .Burger {
+    width: 700px;
+    height: 600px;
   }
-} */
+}
 
 @media (min-width: 500px) and (min-height: 401px) {
-  .burger {
-    width: 60%;
+  .Burger {
+    width: 450px;
+    height: 450px;
   }
 }
-/* 
-@media (min-width: 1000px) and (min-height: 700px) {
-  .burger {
+
+@media (min-width: 500) and (max-height: 400px) {
+  .Burger {
+    width: 350px;
+    height: 300px;
   }
-} */
+}
